Added Ticket Booking Screen

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,9 +27,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/MP1.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.swingx-all-1.6.4.jar=C:\\Program Files\\NetBeans 8.2\\ide\\modules\\ext\\swingx-all-1.6.4.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.swingx-all-1.6.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
