--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,11 +27,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/MP1.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.derbyclient.jar=C:\\Program Files (x86)\\Sun\\JavaDB\\lib\\derbyclient.jar
 file.reference.swingx-all-1.6.4.jar=C:\\Program Files\\NetBeans 8.2\\ide\\modules\\ext\\swingx-all-1.6.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.swingx-all-1.6.4.jar}
+    ${file.reference.swingx-all-1.6.4.jar}:\
+    ${file.reference.derbyclient.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
