Remove, Edit Movie Option In Admin Screen

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,7 +37,8 @@ javac.classpath=\
     ${file.reference.swingx-all-1.6.4.jar}:\
     ${file.reference.derbyclient.jar}:\
     ${file.reference.derbyclient.jar-1}:\
-    ${file.reference.mail-1.4.7.jar}
+    ${file.reference.mail-1.4.7.jar}:\
+    ${libs.beans-binding.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
