--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,5 +1,5 @@
 compile.on.save=true
-file.reference.derbyclient.jar=C:\\Program Files\\Java\\jdk1.8.0_144\\db\\lib\\derbyclient.jar
-file.reference.derbyclient.jar-1=C:\\Program Files\\Java\\jdk1.8.0_144\\db\\lib\\derbyclient.jar
-file.reference.mail-1.4.7.jar=D:\\MP1\\javax.mail-1.4.7.jar
-user.properties.file=C:\\Users\\PAYAL\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+file.reference.derbyclient.jar=C:\\Program Files\\Java\\jdk1.8.0_131\\db\\lib\\derbyclient.jar
+file.reference.derbyclient.jar-1=C:\\Program Files\\Java\\jdk1.8.0_131\\db\\lib\\derbyclient.jar
+file.reference.mail-1.4.7.jar=P:\\code\\J_code\\Git\\MP1\\javax.mail-1.4.7.jar
+user.properties.file=C:\\Users\\parth\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
